feat(permission-center): complete phase7 condition system